# cclark

./: .gitignore  README.md  config.yaml.example  dev-design.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
design/: module-adapter-layer.md  module-card-renderer.md  module-cards.md  module-feishu-frontend.md  module-gateway-core.md  module-handlers.md  module-mvp.md  module-state-and-config.md  module-ws-client.md
docs/: architecture.md  architecture.rst  commands.md  conf.py  extending.md  getting-started.md  index.rst  troubleshooting.md  troubleshooting.rst
docs/_static/: custom.css
docs/getting-started/: configuration.rst  index.rst  installation.rst
docs/modules/: adapter.rst  callback_data.rst  callback_registry.rst  config.rst  event_parsers.rst  feishu_client.rst  handlers.rst  index.rst  main.rst  state.rst  toolbar_config.rst  user_preferences.rst  webhook.rst
docs/modules/cards/: index.rst  streaming.rst
src/cclark/: __init__.py  adapter.py  callback_data.py  callback_registry.py  config.py  event_parsers.py  feishu_client.py  icc_ws_gateway.py  main.py  state.py  toolbar_config.py  user_preferences.py  webhook.py  ws_client.py
src/cclark/cards/: __init__.py  builder.py  output.py  prompt.py  status.py  streaming.py  thinking.py  toolbar.py
src/cclark/handlers/: __init__.py  callback.py  (+4 more)
tests/: conftest.py
tests/integration/: test_webhook_app.py  test_ws_client.py
tests/unit/: test_callback_registry.py  test_card_builder.py  test_config_dir.py  test_event_parsers.py  test_icc_ws_gateway.py  test_main_verbose.py  test_session_creation_commands.py  test_state.py  test_thinking_cards.py  test_user_preferences.py
